CharmBackpackItem, made gems stack